--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import-normalize;
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400;1,500&display=swap');
 
 .App {
   text-align: center;
@@ -16,7 +17,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  // background-color: #282c34;
+  // background: url(./bg.jpg) repeat;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
