--- a/src/styles/1_header_luna_tatoo.scss
+++ b/src/styles/1_header_luna_tatoo.scss
@@ -7,9 +7,7 @@
 
   #header-text-container {
     user-select: none;
-    font-family: 'Playfair Display', serif;
-    font-weight: 500;
-    font-style: italic;
+    font: $stylized-font;
     font-size: Min(90px, 9vw);
     width: 80vw;
     height: Min(90vh, 800px);
@@ -17,6 +15,7 @@
     z-index: 2;
     white-space: nowrap;
     text-shadow: $textBorder4px;
+
     @media (max-width: 500px) {
       text-shadow: $textBorder2px;
     }
@@ -38,11 +37,8 @@
   #cocoTatooContainer {
     width: 100%;
     position: relative;
-    // display: flex;
-    // justify-content: center;
 
     #cocoTatooCircle {
-      // overflow: hidden;
       position: absolute;
       width: Min(60vw, 800px);
       height: Min(90vh, 800px);
@@ -61,27 +57,9 @@
           object-fit: contain;
           width: 100%;
           height: 100%;
-          
-          // display: block;
-          // position: relative;
         }
       }
     }
-  }
-}
-
-.swirl-in-fwd {
-  animation: swirl-in-fwd 0.6s ease-out both;
-}
-
-@keyframes swirl-in-fwd {
-  0% {
-    // transform: rotate(-20deg) scale(.5);
-    opacity: 0;
-  }
-  100% {
-    // transform: rotate(0) scale(1);
-    opacity: 1;
   }
 }
 
