Added credits and images

--- a/src/styles/9_credits.scss
+++ b/src/styles/9_credits.scss
@@ -61,7 +61,7 @@
   background: center bottom / contain no-repeat url(../images/coco_looking_at_horizon.png);
   width: 100%;
   max-width: 1400px;
-  margin: -200px auto 0;
+  margin: -200px auto;
   height: auto;
   min-height: 350px;
 
