--- a/src/styles/Credits.scss
+++ b/src/styles/Credits.scss
@@ -1,57 +1,63 @@
 @import './theme';
 
-#credits-title {
-  // @include gradient-title-dark;
-  font: $stylized-font;
-  font-size: 64px;
-  text-align: center;
-  margin-top: 100px;
-}
+#credit-wrapper {
+  position: relative;
+  z-index: 3;
+  background: white;
 
-#credits {
-  width: 100%;
-  max-width: 1060px;
-  margin: 0 auto 100px;
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  #credits-title {
+    // @include gradient-title-dark;
+    font: $stylized-font;
+    font-size: 64px;
+    text-align: center;
+    padding-top: 100px;
+  }
 
-  .credit-block {
-    width: 300px;
-    margin-bottom: 20px;
+  #credits {
+    width: 100%;
+    max-width: 1060px;
+    margin: 0 auto 100px;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 
-    .credit-category {
-      @include gradient-title;
-      font: $stylized-font;
-      font-size: 38px;
-      margin-top: 40px;
-    }
+    .credit-block {
+      width: 300px;
+      margin-bottom: 20px;
 
-    .credit-one-person {
-      font-size: 16px;
-      margin-top: 16px;
-
-      .credit-name {
-        .credit-avatar {
-          display: inline-block;
-          width: 20px;
-          position: relative;
-          bottom: -3px;
-          // left: -4px;
-          margin-right: 8px;
-          img {
-            width: 100%;
-            height: auto;
-            border-radius: 50%;
-          }
-        }
+      .credit-category {
+        @include gradient-title;
+        font: $stylized-font;
+        font-size: 38px;
+        margin-top: 40px;
       }
 
-      .credit-details, .credit-artworks {
-        margin-top: 3px;
-        font-size: 12px;
-        color: $faded1;
+      .credit-one-person {
+        font-size: 16px;
+        margin-top: 16px;
+
+        .credit-name {
+          .credit-avatar {
+            display: inline-block;
+            width: 20px;
+            position: relative;
+            bottom: -3px;
+            // left: -4px;
+            margin-right: 8px;
+            img {
+              width: 100%;
+              height: auto;
+              border-radius: 50%;
+            }
+          }
+        }
+
+        .credit-details, .credit-artworks {
+          margin-top: 3px;
+          font-size: 12px;
+          color: $faded1;
+        }
       }
     }
   }
