--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,6 +5,14 @@
   position: relative;
   color: $header-text-color;
 
+  #header-bg {
+    position: fixed;
+    height: 85vh;
+    width: 100%;
+    // background-image: linear-gradient(43deg, #d9a7c7 0%, #fffcdc 100%);
+    background: center / cover url(../images/kanata_looking_at_dragon.png);
+  }
+
   #header-text-container {
     user-select: none;
     font: $stylized-font;
@@ -23,15 +31,24 @@
 
   #text-to-the-strongest {
     position: absolute;
+    position: fixed;
+    -webkit-font-smoothing: subpixel-antialiased;
+    backface-visibility: hidden;
     top: 50%;
-    left: 50%;
-    transform: translateY(-230%) translateX(-60%);
+    margin-left: -43%;
+    transform: translateY(-200%);
+    // transform: translateY(-280%) translateX(-83%) translateZ(0);
   }
   #text-luknight {
     position: absolute;
+    position: fixed;
+    -webkit-font-smoothing: subpixel-antialiased;
+    backface-visibility: hidden;
     top: 50%;
-    left: 50%;
-    transform: translateY(190%) translateX(60%);
+    margin-right: -43%;
+    // margin-left: -43%;
+    // left: 50%;
+    transform: translateY(100%);
   }
 
   #cocoTatooContainer {
@@ -39,7 +56,7 @@
     position: relative;
 
     #cocoTatooCircle {
-      position: absolute;
+      position: fixed;
       width: Min(60vw, 800px);
       height: Min(90vh, 800px);
       top: 0;
