--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -10,7 +10,7 @@ $med1: #FFB03B;
 $light1: #FFF0A5;
 
 $text-border: #FFF;
-$page-bg: #D9A7C7;
+$page-bg: #FFFCFD;
 
 $stylized-font: italic 500 12px 'Playfair Display', serif;
 $normal-font: regular 12px 'Volkhov', serif;
