--- a/src/styles/Messages.scss
+++ b/src/styles/Messages.scss
@@ -1,7 +1,7 @@
 #messages {
   margin-top: 5vh;
   padding-top: 15vh;
-  background: #d9a7c7;
+  background: #FFFCFD;
   position: relative;
   z-index: 3;
 }
