--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,10 @@
 @import './theme';
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Volkhov&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: $page-bg;
   font: $normal-font;
