--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -24,7 +24,7 @@
 
     #progress-bar-elapsed {
       border-radius: 10%;
-      background: red;
+      background: #d69f95;
       height: 3px;
     }
   }
