--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,3 +16,11 @@ a, a:visited {
   color: inherit;
   text-decoration: none;
 }
+
+#top {
+  z-index:99;
+  position: absolute;
+  height: 20px;
+  width: 100%;
+  top: 0px;
+}
