--- a/src/styles/Credits.scss
+++ b/src/styles/Credits.scss
@@ -1,6 +1,7 @@
 @import './theme';
 
 #credit-wrapper {
+  overflow-x: hidden;
   position: relative;
   z-index: 3;
   background: white;
@@ -16,13 +17,20 @@
   #credits {
     width: 100%;
     max-width: 1060px;
-    margin: 0 auto 100px;
+    margin: 0 auto -130px;
     text-align: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     position: relative;
     z-index: 2;
+
+    @media (max-width: 1000px) {
+      margin-bottom: -200px;
+    }
+    @media (max-width: 900px) {
+      margin-bottom: -150px;
+    }
 
     .credit-block {
       width: 300px;
@@ -69,7 +77,6 @@
   background: center bottom / contain no-repeat url(../images/coco_looking_at_horizon.png);
   width: 100%;
   max-width: 1400px;
-  margin: -200px 0;
   height: auto;
   min-height: 350px;
   position: relative;
