--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,24 +1,38 @@
 @import './theme';
 @import './utils';
 
-#header {
-  position: relative;
-  color: $header-text-color;
-
-  #header-bg {
-    position: fixed;
+.header-bg {
+  overflow: hidden;
+  position: absolute;
+  height: 90vh;
+  top: 0;
+  width: 100%;
+  // background-image: linear-gradient(43deg, #d9a7c7 0%, #fffcdc 100%);
+  // background: center / cover url(../images/kanata_looking_at_dragon.png);
+  img {
+    position: relative;
     height: 90vh;
-    width: 100%;
-    // background-image: linear-gradient(43deg, #d9a7c7 0%, #fffcdc 100%);
-    background: center / cover url(../images/kanata_looking_at_dragon.png);
+    // margin-left: 50%;
+    // transform: translateX(-50%);
+    width: 100vw;
+    object-fit: cover;
   }
 
   #dark-overlay {
     background: rgba(0,0,0,.5);
-    position: fixed;
+    position: absolute;
+    z-index: 2;
     height: 90vh;
     width: 100%;
   }
+}
+
+#header {
+  position: relative;
+  color: $header-text-color;
+  // z-index:10;
+  height: 90vh;
+  width: 100%;
 
   #header-text-container {
     user-select: none;
@@ -37,7 +51,6 @@
   }
 
   #text-to-the-strongest {
-    position: absolute;
     position: fixed;
     -webkit-font-smoothing: subpixel-antialiased;
     backface-visibility: hidden;
@@ -48,7 +61,6 @@
   }
 
   #text-luknight {
-    position: absolute;
     position: fixed;
     -webkit-font-smoothing: subpixel-antialiased;
     backface-visibility: hidden;
