--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,36 +1,48 @@
+@import 'theme.scss';
+@import 'utils.scss';
+
 #navbar {
-  position: fixed;
-  z-index:9;
-  width: 100%;
+  --elapsed-scroll: #d69f95;
+  --remaining-scroll: #ab8591;
+  --active-item: #f9f7f4;
+  --inactive-items: #d8c4c3;
+
+  height: 48px;
   padding: 0;
-  height: 100px;
-
-  &.at-messages {
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
-  }
-  &.at-top, &.at-messages {
-    #progress-bar {
-      background: #5a3b38;
-      #progress-bar-elapsed {
-        background: #dab6b6;
-      }
-    }
-    a {
-      color: #907361;
-
-      &.is-current {
-        color: #995a64;
-      }
-    }
-  }
+  position: fixed;
+  width: 100%;
+  z-index:9;
 
   a {
-    color: #f9f7f4;
-
-    &.is-current {
-      color: #d8c4c3;
-    }
+    color: var(--inactive-items);
+    &.is-current { color: var(--active-item); }
   }
+
+  &.at-top {
+  --elapsed-scroll: #dab6b6;
+  --remaining-scroll: #5a3b38;
+  --active-item: #99675A;
+  --inactive-items: #907361;
+  }
+
+  &.at-intro {
+    --elapsed-scroll: #F9F7F4;
+    --remaining-scroll: #E48682;
+    --active-item: #f9f7f4;
+    --inactive-items: #F8BFBC;
+  }
+
+  &.at-playlist, &.at-messages, &.at-credits {
+    background: $page-bg;
+    --elapsed-scroll: #{$med1};
+    --remaining-scroll: #F2E1D7;
+    --active-item: #E89A26;
+    --inactive-items: #D6B59C;
+  }
+  // &.at-messages {
+    // background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
+  // }
+
 
   #progress-bar {
     border-radius: 10%;
@@ -38,13 +50,13 @@
     position: relative;
     width: 90%;
     max-width: 600px;
-    background: #ab8591;
+    background: var(--remaining-scroll);
     height: 3px;
     margin: auto;
 
     #progress-bar-elapsed {
       border-radius: 10%;
-      background: #d69f95;
+      background: var(--elapsed-scroll);
       height: 3px;
     }
   }
