--- a/src/styles/Playlist.scss
+++ b/src/styles/Playlist.scss
@@ -1,50 +1,59 @@
 @import 'theme.scss';
+@import 'utils.scss';
 
-#playlist {
-  background: $playlist-bg;
+#playlist-section {
   position: relative;
-  z-index: 3;
-  margin-top: -33px;
-  padding: 50px 0px;
+  z-index: 4;
+  background: $page-bg;
+}
+#playlist-strip-under-nav {
+    @include strip-under-nav;
+    background: $page-bg;
+}
 
-  &::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 30px;
-    top: -30px;
-    background: linear-gradient(
-      180deg,
-      rgba(0,0,0,0) 0%,
-      rgba(0,0,0,.4) 100%,
-    );
-  }
 
-  &::after {
-    opacity: 0;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(0,0,0,.4);
-    transition: .5s;
+#playlist-title {
+  margin: -20px auto 30px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @include gradient-title;
+  font: $stylized-font;
+  font-size: 46px;
+  text-rendering: optimizeLegibility;
+  padding: 56px 30px 0;
+  @media (max-width: 500px) {
+    font-size: 36px;
   }
-  &.at-top::after {
-    opacity: 1;
+  span {
+    margin-left: 30px;
   }
-  
-  #playlist-introduction {
-    margin: 0 auto;
-    padding: 0 25px;
-    // width: 100vw;
-    max-width: 800px;
-    font-size: Clamp(22px, 2.75vw, 36px);
-    color: white;
-
-    #playlist-introduction-paragraph-2 {
-      margin-top: 25px;
-    }
+  img {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
   }
 }
+
+#playlist-iframe {
+  padding: 30px 25px 0;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+#video-responsive {
+  overflow: hidden;
+  padding: 0 25px 56.25%;
+  position: relative;
+  height: 0;
+  iframe {
+    border-radius: 7px;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+}
+
