--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,4 +1,4 @@
-$header-text-color: #310700;
+$header-text-color: #310C00;
 
 $dark0: #310700;
 $dark1: #8E2800;
@@ -10,7 +10,8 @@ $med1: #FFB03B;
 $light1: #FFF0A5;
 
 $text-border: #FFF;
-$page-bg: #FFFCFD;
+// $page-bg: #FFFCFD;
+$page-bg: #FDF6F3;
 
 $stylized-font: italic 500 12px 'Playfair Display', serif;
 $normal-font: regular 12px 'Volkhov', serif;
@@ -21,7 +22,8 @@ $red-at-night-3: #FF665A;
 $red-at-night-4: #7D6B7D;
 $red-at-night-5: #A3A1A8;
 
-$playlist-bg: $red-at-night-3;
+// $playlist-bg: $red-at-night-3;
+$playlist-bg: $red-at-night-2;
 
 @mixin gradient-title {
   font: $stylized-font;
