--- a/src/styles/Messages.scss
+++ b/src/styles/Messages.scss
@@ -8,6 +8,7 @@
   margin: 0 auto;
   width: 1200px;
   @media (max-width: 1200px) {
+    width: 100%;
     max-width: 850px;
   }
   @media (max-width: 850px) {
