--- a/src/styles/Playlist.scss
+++ b/src/styles/Playlist.scss
@@ -27,6 +27,8 @@
     font-size: 36px;
   }
   span {
+    background: -webkit-linear-gradient(45deg, $dark1, $med1);
+    -webkit-background-clip: text;
     margin-left: 30px;
   }
   img {
@@ -56,4 +58,3 @@
     position: absolute;
   }
 }
-
