--- a/src/styles/Messages.scss
+++ b/src/styles/Messages.scss
@@ -63,6 +63,11 @@
       font-size: 26px;
     }
     span {
+      background: -webkit-linear-gradient(45deg, $dark1, $med1);
+      -webkit-background-clip: text;
+      //Other fix, delete if no longer needed
+      //@include gradient-title;
+      //font-size: 46px;
       margin-left: 30px;
     }
     img {
