--- a/src/styles/IntroductionText.scss
+++ b/src/styles/IntroductionText.scss
@@ -3,15 +3,20 @@
 
 #playlist-introduction-wrapper {
   background: $playlist-bg;
-  padding: 0 0 50px;
+  padding: 50px 0 50px;
   position: relative;
   top: -34px;
   transform-style: preserve-3d;
   z-index: 4;
 
-  #intro-strip-under-nav {
-    @include strip-under-nav;
-    background: $playlist-bg;
+  #flags {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    div {
+      margin: 0 1em;
+      font-size: 28px;
+    }
   }
 
   &::before {
