--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -5,7 +5,7 @@ $dark1: #8E2800;
 
 $faded1: #755F56;
 
-$med1: #FFB03B;
+$med1: #DB8428;
 
 $light1: #FFF0A5;
 
@@ -13,8 +13,8 @@ $text-border: #FFF;
 // $page-bg: #FFFCFD;
 $page-bg: #FDF6F3;
 
-$stylized-font: italic 500 12px 'Playfair Display', serif;
-$normal-font: regular 12px 'Volkhov', serif;
+$stylized-font: var(--title-style) 500 12px 'Playfair Display', 'Kosugi Maru', serif;
+$normal-font: normal 16px 'Abyssinica SIL', 'Noto Sans JP', sans;
 
 $red-at-night-1: #FFF587;
 $red-at-night-2: #FF8C64;
@@ -31,6 +31,11 @@ $playlist-bg: $red-at-night-2;
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+// @mixin gradient-title {
+  // font: $stylized-font;
+  // color: $dark1;
+// }
 
 
 @mixin gradient-title-dark {
