remove unused fonts

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,5 @@
 @import './theme';
-@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Playfair+Display:ital,wght@1,500&family=Volkhov&family=Noto+Sans+JP&family=Noto+Serif+JP&family=M+PLUS+Rounded+1c&display=block');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Noto+Sans+JP&display=block');
 @import url('https://fonts.cdnfonts.com/css/abyssinica-sil');
 
 :root {
