--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -90,6 +90,14 @@ $scale: 0.1;
       bottom: 0;
       margin: 0 auto;
 
+      @media only screen 
+        and (min-device-width: 768px) 
+        and (max-device-width: 1024px) 
+        and (orientation: landscape) 
+        and (-webkit-min-device-pixel-ratio: 1) {
+          height: Min(70vh, 550px);
+      }
+
       div {
         width: 100%;
         height: 100%;
