--- a/src/styles/Playlist.scss
+++ b/src/styles/Playlist.scss
@@ -26,7 +26,7 @@
   @media (max-width: 500px) {
     font-size: 36px;
   }
-  span {
+  span.playlist-title {
     background: -webkit-linear-gradient(45deg, $dark1, $med1);
     -webkit-background-clip: text;
     margin-left: 30px;
