--- a/src/styles/Playlist.scss
+++ b/src/styles/Playlist.scss
@@ -13,12 +13,12 @@
 
 
 #playlist-title {
+  @extend .gradient-title;
   margin: -20px auto 30px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  @include gradient-title;
   font: $stylized-font;
   font-size: 46px;
   text-rendering: optimizeLegibility;
@@ -29,6 +29,7 @@
   span.playlist-title {
     background: -webkit-linear-gradient(45deg, $dark1, $med1);
     -webkit-background-clip: text;
+    background-clip: text;
     margin-left: 30px;
   }
   img {
