--- a/src/styles/Parallax.scss
+++ b/src/styles/Parallax.scss
@@ -27,7 +27,7 @@ $parallax-ios         : true !default;
       -webkit-overflow-scrolling: touch;
     }
     // Preserve 3D
-    &, * {
+    &, & > * {
       transform-style: preserve-3d;
     }
   }
@@ -42,7 +42,7 @@ html, body {
   $perspective : $parallax-perspective
   ) {
   transform:
-    translateZ($distance * $perspective * 1px)
+    translate3d(10px*$distance, 10px * (10 * $distance - $perspective), $distance * $perspective * 1px)
     scale(abs($distance - 1))
   ;
   z-index: $distance * 1000;
