--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -13,7 +13,7 @@ $text-border: #FFF;
 // $page-bg: #FFFCFD;
 $page-bg: #FDF6F3;
 
-$stylized-font: var(--title-style) 500 12px 'Playfair Display', serif;
+$stylized-font: var(--title-style) 500 12px 'Playfair Display', 'Noto Sans JP', serif;
 $normal-font: normal 16px 'Abyssinica SIL', 'Noto Sans JP', sans;
 
 $red-at-night-1: #FFF587;
