--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,6 +2,7 @@
 @import './utils';
 
 .header-bg {
+  background: #482E2C;
   overflow: hidden;
   position: absolute;
   height: 90vh;
@@ -10,11 +11,12 @@
   // background-image: linear-gradient(43deg, #d9a7c7 0%, #fffcdc 100%);
   // background: center / cover url(../images/kanata_looking_at_dragon.png);
   img {
-    position: relative;
+    position: fixed;
     height: 90vh;
     // margin-left: 50%;
     // transform: translateX(-50%);
-    width: 100vw;
+    width: 100%;
+  width: 100%;
     object-fit: cover;
   }
 
