spring adjustment test

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -27,7 +27,7 @@
   }
 
   &.at-top {
-    --elapsed-scroll: #dab6b6;
+    --elapsed-scroll: #946969;
     --remaining-scroll: #5a3b38;
     --active-item: #99675A;
     --inactive-items: #907361;
