--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,18 +5,17 @@
   background: #482E2C;
   overflow: hidden;
   position: absolute;
-  height: 90vh;
+  height: 100vh;
   top: 0;
   width: 100%;
   // background-image: linear-gradient(43deg, #d9a7c7 0%, #fffcdc 100%);
   // background: center / cover url(../images/kanata_looking_at_dragon.png);
   img {
     position: relative;
-    height: 100%;
-    // margin-left: 50%;
-    // transform: translateX(-50%);
-    width: 100%;
-  width: 100%;
+    height: 100vh;
+    margin-left: 50%;
+    transform: translateX(-49.5%);
+    min-width: 100%;
     object-fit: cover;
   }
 
