--- a/src/styles/IntroductionText.scss
+++ b/src/styles/IntroductionText.scss
@@ -27,8 +27,8 @@
     content: '';
     height: 30px;
     position: absolute;
+    // z-index: 999999999;
     top: -30px;
-    transform: translate3d(0, 0, 1px);
     width: 100%;
   }
 
