--- a/src/styles/Parallax.scss
+++ b/src/styles/Parallax.scss
@@ -43,7 +43,7 @@ html, body {
   ) {
   transform:
     translate3d(10px*$distance, 10px * (10 * $distance - $perspective), $distance * $perspective * 1px)
-    scale(abs($distance - 1.3))
+    scale(abs($distance - 1.2))
   ;
   z-index: $distance * 1000;
 }
@@ -55,6 +55,7 @@ html, body {
     position: relative;
     overflow-y: auto;
     overflow-x: hidden;
+    scroll-behavior: smooth;
     
     // For things animated with spring, ignore parallax
     .animationWrapper {
@@ -64,5 +65,5 @@ html, body {
 
 .header-bg {
     top: -10%;
-    @include parallax(-3);
+    @include parallax(-2.5);
 }
