--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -25,6 +25,8 @@
     z-index: 2;
     height: 100%;
     width: 100%;
+    transition: 3s $easeOutQuart;
+    opacity: 1;
   }
 }
 
@@ -60,6 +62,9 @@
     top: 50%;
     margin-left: -43%;
     transform: translateY(-200%);
+    transition: 4s $easeOutQuart;
+    left: 45%;
+    opacity: 0;
     // transform: translateY(-280%) translateX(-83%) translateZ(0);
   }
 
@@ -71,7 +76,9 @@
     margin-right: -43%;
     // margin-left: -43%;
     // left: 50%;
-    transform: translateY(-00%);
+    transition: 4s $easeOutQuart;
+    left: 60%;
+    opacity: 0;
   }
 
   #cocoTatooContainer {
