--- a/src/styles/Messages.scss
+++ b/src/styles/Messages.scss
@@ -60,7 +60,6 @@
     justify-content: center;
     @include gradient-title;
     font: $stylized-font;
-    font-size: 46px;
     text-rendering: optimizeLegibility;
     padding: 36px 30px 0;
     @media (max-width: 450px) {
@@ -69,16 +68,18 @@
     span.messages-title {
       background: -webkit-linear-gradient(45deg, $dark1, $med1);
       background-clip: text;
+    font-size: 46px;
       //Other fix, delete if no longer needed
       //@include gradient-title;
       //font-size: 46px;
       margin-left: 30px;
     }
-    img {
+    img.sourced-img {
       width: 130px;
       height: 130px;
       display: inline-block;
     }
+    .arrow-down { top: 6px; }
   }
 
   .messages-list {
