--- a/src/styles/Parallax.scss
+++ b/src/styles/Parallax.scss
@@ -27,9 +27,9 @@ $parallax-ios         : true !default;
       -webkit-overflow-scrolling: touch;
     }
     // Preserve 3D
-    &, & > * {
-      transform-style: preserve-3d;
-    }
+    // &, & > * {
+      // transform-style: preserve-3d;
+    // }
   }
 }
 
@@ -58,9 +58,9 @@ html, body {
     scroll-behavior: smooth;
     
     // For things animated with spring, ignore parallax
-    .animationWrapper {
-        transform-style: flat;
-    }
+    // .animationWrapper {
+        // transform-style: flat;
+    // }
 }
 
 .header-bg {
