--- a/src/styles/Playlist.scss
+++ b/src/styles/Playlist.scss
@@ -17,25 +17,26 @@
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center;
   @include gradient-title;
-  font: $stylized-font;
-  font-size: 46px;
+  font-size: unset;
+  justify-content: center;
   text-rendering: optimizeLegibility;
   padding: 56px 30px 0;
   @media (max-width: 500px) {
-    font-size: 36px;
   }
   span.playlist-title {
     background: -webkit-linear-gradient(45deg, $dark1, $med1);
-    -webkit-background-clip: text;
+    background-clip: text;
     margin-left: 30px;
+    font: $stylized-font;
+    font-size: 46px;
   }
   img {
     width: 100px;
     height: 100px;
     display: inline-block;
   }
+  .arrow-down { top: 6px; }
 }
 
 #playlist-iframe {
