--- a/src/styles/Playlist.scss
+++ b/src/styles/Playlist.scss
@@ -27,6 +27,7 @@
     background-clip: text;
     margin-left: 30px;
     font: $stylized-font;
+    font-size: 46px;
     @media (max-width: 500px) {
     font-size: 26px;
     }
