--- a/src/styles/Playlist.scss
+++ b/src/styles/Playlist.scss
@@ -13,7 +13,7 @@
 
 
 #playlist-title {
-  @extend .gradient-title;
+  @include gradient-title;
   margin: -0px auto 30px;
   text-align: center;
   display: flex;
@@ -23,14 +23,12 @@
   text-rendering: optimizeLegibility;
   padding: 56px 30px 0;
   span.playlist-title {
-    background: -webkit-linear-gradient(45deg, $dark1, $med1);
-    -webkit-background-clip: text;
-    background-clip: text;
+    @include gradient-title;
     margin-left: 30px;
     font: $stylized-font;
     font-size: 46px;
     @media (max-width: 500px) {
-    font-size: 26px;
+      font-size: 26px;
     }
   }
   img {
