--- a/src/styles/LanguageButton.scss
+++ b/src/styles/LanguageButton.scss
@@ -11,7 +11,9 @@
 
   img {
     height: 25px;
-    width: 30px;
+    width: 40px;
+    border: 1px solid rgba(#333, .2);
+    object-fit: cover;
   }
 
   &.at-top {
