--- a/src/styles/Messages.scss
+++ b/src/styles/Messages.scss
@@ -115,6 +115,7 @@
       &::before {
         content: '“';
         font: $stylized-font;
+        font-style: italic; // override jp
         font-size: 150px;
         position: absolute;
         top: -60px;
