--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,12 +1,29 @@
 @import './theme';
 
-$textBorder2px: $text-border 2px 0px 0px, $text-border 1.75517px 0.958851px 0px, $text-border 1.0806px 1.68294px 0px, $text-border 0.141474px 1.99499px 0px, $text-border -0.832294px 1.81859px 0px, $text-border -1.60229px 1.19694px 0px, $text-border -1.97998px 0.28224px 0px, $text-border -1.87291px -0.701566px 0px, $text-border -1.30729px -1.5136px 0px, $text-border -0.421592px -1.95506px 0px, $text-border 0.567324px -1.91785px 0px, $text-border 1.41734px -1.41108px 0px, $text-border 1.92034px -0.558831px 0px;
+$ease-out-quart: cubic-bezier(0.165, 0.840, 0.440, 1.000);
 
-$textBorder2pxPageBg: $page-bg 2px 0px 0px, $page-bg 1.75517px 0.958851px 0px, $page-bg 1.0806px 1.68294px 0px, $page-bg 0.141474px 1.99499px 0px, $page-bg -0.832294px 1.81859px 0px, $page-bg -1.60229px 1.19694px 0px, $page-bg -1.97998px 0.28224px 0px, $page-bg -1.87291px -0.701566px 0px, $page-bg -1.30729px -1.5136px 0px, $page-bg -0.421592px -1.95506px 0px, $page-bg 0.567324px -1.91785px 0px, $page-bg 1.41734px -1.41108px 0px, $page-bg 1.92034px -0.558831px 0px;
+// borders
+$text-border-2px: $text-border 2px 0px 0px, $text-border 1.75517px 0.958851px 0px, $text-border 1.0806px 1.68294px 0px, $text-border 0.141474px 1.99499px 0px, $text-border -0.832294px 1.81859px 0px, $text-border -1.60229px 1.19694px 0px, $text-border -1.97998px 0.28224px 0px, $text-border -1.87291px -0.701566px 0px, $text-border -1.30729px -1.5136px 0px, $text-border -0.421592px -1.95506px 0px, $text-border 0.567324px -1.91785px 0px, $text-border 1.41734px -1.41108px 0px, $text-border 1.92034px -0.558831px 0px;
+$text-border-2px-page-bg: $page-bg 2px 0px 0px, $page-bg 1.75517px 0.958851px 0px, $page-bg 1.0806px 1.68294px 0px, $page-bg 0.141474px 1.99499px 0px, $page-bg -0.832294px 1.81859px 0px, $page-bg -1.60229px 1.19694px 0px, $page-bg -1.97998px 0.28224px 0px, $page-bg -1.87291px -0.701566px 0px, $page-bg -1.30729px -1.5136px 0px, $page-bg -0.421592px -1.95506px 0px, $page-bg 0.567324px -1.91785px 0px, $page-bg 1.41734px -1.41108px 0px, $page-bg 1.92034px -0.558831px 0px;
+$text-border-4px: $text-border 4px 0px 0px, $text-border 3.87565px 0.989616px 0px, $text-border 3.51033px 1.9177px 0px, $text-border 2.92676px 2.72656px 0px, $text-border 2.16121px 3.36588px 0px, $text-border 1.26129px 3.79594px 0px, $text-border 0.282949px 3.98998px 0px, $text-border -0.712984px 3.93594px 0px, $text-border -1.66459px 3.63719px 0px, $text-border -2.51269px 3.11229px 0px, $text-border -3.20457px 2.39389px 0px, $text-border -3.69721px 1.52664px 0px, $text-border -3.95997px 0.56448px 0px, $text-border -3.97652px -0.432781px 0px, $text-border -3.74583px -1.40313px 0px, $text-border -3.28224px -2.28625px 0px, $text-border -2.61457px -3.02721px 0px, $text-border -1.78435px -3.57996px 0px, $text-border -0.843183px -3.91012px 0px, $text-border 0.150409px -3.99717px 0px, $text-border 1.13465px -3.8357px 0px, $text-border 2.04834px -3.43574px 0px, $text-border 2.83468px -2.82216px 0px, $text-border 3.44477px -2.03312px 0px, $text-border 3.84068px -1.11766px 0px, $text-border 3.9978px -0.132717px 0px;
+$text-border-4px-page-bg: $page-bg 4px 0px 0px, $page-bg 3.87565px 0.989616px 0px, $page-bg 3.51033px 1.9177px 0px, $page-bg 2.92676px 2.72656px 0px, $page-bg 2.16121px 3.36588px 0px, $page-bg 1.26129px 3.79594px 0px, $page-bg 0.282949px 3.98998px 0px, $page-bg -0.712984px 3.93594px 0px, $page-bg -1.66459px 3.63719px 0px, $page-bg -2.51269px 3.11229px 0px, $page-bg -3.20457px 2.39389px 0px, $page-bg -3.69721px 1.52664px 0px, $page-bg -3.95997px 0.56448px 0px, $page-bg -3.97652px -0.432781px 0px, $page-bg -3.74583px -1.40313px 0px, $page-bg -3.28224px -2.28625px 0px, $page-bg -2.61457px -3.02721px 0px, $page-bg -1.78435px -3.57996px 0px, $page-bg -0.843183px -3.91012px 0px, $page-bg 0.150409px -3.99717px 0px, $page-bg 1.13465px -3.8357px 0px, $page-bg 2.04834px -3.43574px 0px, $page-bg 2.83468px -2.82216px 0px, $page-bg 3.44477px -2.03312px 0px, $page-bg 3.84068px -1.11766px 0px, $page-bg 3.9978px -0.132717px 0px;
 
-$textBorder4px: $text-border 4px 0px 0px, $text-border 3.87565px 0.989616px 0px, $text-border 3.51033px 1.9177px 0px, $text-border 2.92676px 2.72656px 0px, $text-border 2.16121px 3.36588px 0px, $text-border 1.26129px 3.79594px 0px, $text-border 0.282949px 3.98998px 0px, $text-border -0.712984px 3.93594px 0px, $text-border -1.66459px 3.63719px 0px, $text-border -2.51269px 3.11229px 0px, $text-border -3.20457px 2.39389px 0px, $text-border -3.69721px 1.52664px 0px, $text-border -3.95997px 0.56448px 0px, $text-border -3.97652px -0.432781px 0px, $text-border -3.74583px -1.40313px 0px, $text-border -3.28224px -2.28625px 0px, $text-border -2.61457px -3.02721px 0px, $text-border -1.78435px -3.57996px 0px, $text-border -0.843183px -3.91012px 0px, $text-border 0.150409px -3.99717px 0px, $text-border 1.13465px -3.8357px 0px, $text-border 2.04834px -3.43574px 0px, $text-border 2.83468px -2.82216px 0px, $text-border 3.44477px -2.03312px 0px, $text-border 3.84068px -1.11766px 0px, $text-border 3.9978px -0.132717px 0px;
+.fade-in { 
+  animation: fade-in 3s $ease-out-quart both; 
+}
 
-$textBorder4pxPageBg: $page-bg 4px 0px 0px, $page-bg 3.87565px 0.989616px 0px, $page-bg 3.51033px 1.9177px 0px, $page-bg 2.92676px 2.72656px 0px, $page-bg 2.16121px 3.36588px 0px, $page-bg 1.26129px 3.79594px 0px, $page-bg 0.282949px 3.98998px 0px, $page-bg -0.712984px 3.93594px 0px, $page-bg -1.66459px 3.63719px 0px, $page-bg -2.51269px 3.11229px 0px, $page-bg -3.20457px 2.39389px 0px, $page-bg -3.69721px 1.52664px 0px, $page-bg -3.95997px 0.56448px 0px, $page-bg -3.97652px -0.432781px 0px, $page-bg -3.74583px -1.40313px 0px, $page-bg -3.28224px -2.28625px 0px, $page-bg -2.61457px -3.02721px 0px, $page-bg -1.78435px -3.57996px 0px, $page-bg -0.843183px -3.91012px 0px, $page-bg 0.150409px -3.99717px 0px, $page-bg 1.13465px -3.8357px 0px, $page-bg 2.04834px -3.43574px 0px, $page-bg 2.83468px -2.82216px 0px, $page-bg 3.44477px -2.03312px 0px, $page-bg 3.84068px -1.11766px 0px, $page-bg 3.9978px -0.132717px 0px;
+@keyframes fade-in { 
+  0% {
+     opacity: 0; 
+    }
+ 100% {
+    opacity: 1; 
+  } 
+}
+
+.invisible {
+  opacity: 0;
+}
 
 @mixin strip-under-nav {
   background: $playlist-bg;
@@ -17,19 +34,4 @@ $textBorder4pxPageBg: $page-bg 4px 0px 0px, $page-bg 3.87565px 0.989616px 0px, $
   top: 0;
   left: 0;
 }
-
-.invisible {
-  opacity: 0;
-}
-
-$easeOutQuart: cubic-bezier(0.165, 0.840, 0.440, 1.000);
-
-.fade-in { animation: fade-in 3s $easeOutQuart both; }
-@keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-
-// .left-to-center { animation: left-to-center 5s $easeOutQuart both; }
-// @keyframes left-to-center { 0% { left: 45%; } 100% { left: 50%; } }
-// .center-to-left { animation: center-to-left 5s $easeOutQuart both; }
-// @keyframes center-to-left { 0% { left: 50%; } 100% { left: 45%; } }
-
 
